--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -51,6 +51,18 @@ def get_sample_names():
     # remove any possible duplicates
     return list(set(samples))
 
+def get_primer_bed(wildcards):
+    '''
+    Get the path to the BED file containing amplicon primers.
+    '''
+    return config.get("primer_bed", "")
+
+def get_primer_offset(wildcards):
+    '''
+    Get the number of bases to offset the primer when removing primers from amplicon BED
+    '''
+    return config.get("primer_offset", "30")
+
 def get_negative_control_samples():
     if "negative_control_samples" in config:
         return config["negative_control_samples"]
@@ -527,3 +539,14 @@ rule make_ambiguous_position_report:
         script=srcdir("ambiguous_position_check.py")
     shell:
         "python {params.script} --alleles {input.alleles} --min-count 3 > {output}"
+
+rule make_amplicon_bed:
+    input:
+        primers=get_primer_bed
+    output:
+        "qc_analysis/amplicon.bed"
+    params:
+        script="primers_to_amplicons.py",
+        offset=get_primer_offset
+    shell:
+        "{params.script} --primers {input.primers} --offset {params.offset} --remove_primers --output {output}"
