updated snakemake file to include changes to the primer_to_amplicons.py script

--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -61,22 +61,13 @@ def get_primer_offset(wildcards):
     '''
     Get the number of bases to offset the primer when removing primers from amplicon BED
     '''
-    return config.get("primer_offset", "30")
+    return config.get("primer_offset", "0")
 
-def get_remove_primers_opt(wildcards):
-    return config.get("remove_primers", "")
-
-def get_amplicon_bed_remove_primer_opt(wildcards):
+def get_primer_bed_type_opt(wildcards):
     '''
-    If config.yaml has 'remove_primer:' option set to True, set the '--remove_primers' option.
+    Get option bed_type from config.yaml
     '''
-    remove_primer_opt = get_remove_primers_opt(wildcards)
-    if remove_primer_opt == 'True':
-        return '--remove_primers'
-    elif remove_primer_opt == 'False':
-        return ''
-    else:
-        return '--remove_primers'
+    return config.get("bed_type", "unique_amplicons")
 
 def get_negative_control_samples():
     if "negative_control_samples" in config:
@@ -571,6 +562,6 @@ rule make_amplicon_bed:
     params:
         script="primers_to_amplicons.py",
         offset=get_primer_offset,
-        remove_primer_opt=get_amplicon_bed_remove_primer_opt
+        bed_type_opt=get_primer_bed_type_opt
     shell:
-        "{params.script} --primers {input.primers} --offset {params.offset} {params.remove_primer_opt} --output {output}"
+        "{params.script} --primers {input.primers} --offset {params.offset} --bed_type {params.bed_type_opt} --output {output}"
