--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
   - newick_utils
   - pip=19.3.1
   - minimap2
-  - pdftoppm
+  - poppler
   - numpy=1.19.1
   - biopython
   - pip:
