--- a/environment.yml
+++ b/environment.yml
@@ -30,3 +30,4 @@ dependencies:
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/cov-lineages/pangoLEARN.git
       - git+https://github.com/cov-ert/datafunk.git
+      - git+https://github.com/jts/ncov-tools.git#egg=ncov_parser&subdirectory=parser
