remove PDF report from default as we can't guarantee pdflatex is installed

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,5 +11,4 @@ rule all:
     input:
         get_qc_sequencing_plots,
         get_qc_analysis_plots,
-        get_qc_reports,
-        get_final_pdf_report
+        get_qc_reports
