--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,6 +1,9 @@
 import glob
 import os
 
+#singularity: "docker://poquirion/ncov-tools:latest"
+singularity: "/home/poq/covid/package_ncov-tools/.snakemake/singularity/7f0a6cf10df7320052c57c5468fcf292.simg"
+
 include: "rules/common.smk"
 include: "rules/sequencing.smk"
 include: "rules/analysis.smk"
