--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,8 +1,7 @@
 import glob
 import os
 
-#singularity: "docker://poquirion/ncov-tools:latest"
-singularity: "/home/poq/covid/package_ncov-tools/.snakemake/singularity/7f0a6cf10df7320052c57c5468fcf292.simg"
+singularity: "docker://poquirion/ncov-tools:latest"  # Set image to tagged version (not latest) in production
 
 include: "rules/common.smk"
 include: "rules/sequencing.smk"
