--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -26,6 +26,7 @@ dependencies:
   - pip:
       - dendropy>=4.4.0
       - pyvcf
+      - ncov-parser
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/cov-lineages/pangoLEARN.git
