--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -22,7 +22,7 @@ dependencies:
   - poppler
   - numpy=1.19.1
   - biopython=1.77
-  - texlive-core
+  - snpeff 
   - pip:
       - dendropy>=4.4.0
       - pyvcf
