--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -13,4 +13,4 @@ rule all:
     input:
         get_qc_sequencing_plots,
         get_qc_analysis_plots,
-        get_qc_reports,
+        get_qc_reports
