--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -32,3 +32,4 @@ dependencies:
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/cov-lineages/pangoLEARN.git
       - git+https://github.com/cov-ert/datafunk.git
+      - git+https://github.com/jts/ncov-watch.git
