--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -21,6 +21,7 @@ dependencies:
   - pip=19.3.1
   - minimap2
   - poppler
+  - gofasta
   - numpy=1.19.1
   - biopython=1.77
   - snpeff=5.0-0
@@ -31,5 +32,4 @@ dependencies:
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/cov-lineages/pangoLEARN.git
-      - git+https://github.com/cov-ert/datafunk.git
       - git+https://github.com/jts/ncov-watch.git
