--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -25,6 +25,9 @@ dependencies:
   - numpy=1.19.1
   - biopython=1.77
   - snpeff=5.0-0
+  - icu=68.1
+  - boost-cpp=1.75.0
+  - usher
   - pip:
       - dendropy>=4.4.0
       - pyvcf
@@ -32,4 +35,6 @@ dependencies:
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/cov-lineages/pangoLEARN.git
+      - git+https://github.com/cov-lineages/constellations.git
+      - git+https://github.com/cov-lineages/scorpio.git
       - git+https://github.com/jts/ncov-watch.git
