--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -37,4 +37,5 @@ dependencies:
       - git+https://github.com/cov-lineages/pangoLEARN.git
       - git+https://github.com/cov-lineages/constellations.git
       - git+https://github.com/cov-lineages/scorpio.git
+      - git+https://github.com/cov-lineages/pango-designation.git
       - git+https://github.com/jts/ncov-watch.git
